# diamorph-prediction

./: .gitmodules  Dockerfile  JenkinsConstants.groovy  README.md  ai4-metadata.yml  metadata.json  pyproject.toml  tox.ini
.sqa/: config.yml  dockerfile
api/: __init__.py  config.py  responses.py  schemas.py  utils.py
diamorph/: README.md  __init__.py  config.py  utils.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-diamorph_start.ipynb
tests/: README.md
tests/test_metadata/: test_requirements.py
