[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "diamorph-prediction"
authors = [
    { name = "Elnaz Azmi", email = "elnaz.azmi@kit.edu" },
    { name = "Martin Laviale", email = "martin.laviale@univ-lorraine.fr" },
]
description = "An application to detect and predict diatoms on microscopic images."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-only" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/diamorph-prediction"
"Bug Tracker" = "https://github.com/ai4os-hub/diamorph-prediction/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "DIAMORPH_DATA_PATH=tests/data",
    "DIAMORPH_MODELS_PATH=tests/models",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = [
    "diamorph",
    "diamorph.api",
]

[tool.setuptools.package-dir]
"diamorph.api" = "api"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
diamorph = "diamorph.api"
